fixed alignment

--- a/style.css
+++ b/style.css
@@ -9,26 +9,24 @@ body {
 
 
 .column {
-  float:left;
-  /* text-align: leftcolumn */
-  color: white;
-  width: 30%;
-  padding: 30px
+  width: 100%;
 }
 
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-@media screen and (max-width:940px) {
+@media only screen and (min-width:1000px) {
   .column {
-    width: 100%;
-    display:block;
-    padding: 0;
-  }
-}
 
-/* Here's how to create a mobile view in CSS:*/
+    float: left;
+  }
+
+  .left {
+    margin-right: auto;
+    width: 40%;
+  }
+
+  .right {
+    margin-left: auto;
+    width: 60%;
+  }
+
+
+}
